# boid-sim

./: .gitignore  CMakeLists.txt
cuda/: boid_params.hpp  boid_sim_cuda.cpp  boid_sim_cuda.cu  boid_sim_cuda.hpp  constants.hpp  cuda_boid.cu  cuda_boid.cuh  group_params.hpp  symbol_defs.cuh  vec3.cuh
include/: boid.hpp  boid.txt  boid_sim.hpp  globals.hpp  window.hpp
shaders/: 7.1.camera.fs  7.1.camera.vs
src/: boid_sim.cu  boid_sim.cuh  main.cpp  main.cu  vec3.cuh
